# propshare

./: .env.example  .gitignore  capimax-backend-roadmap.md  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_phase1_identity.py  0003_phase2_kyc.py  0004_phase3_property_catalog.py  0005_phase4_payments.py  0006_phase5_investments.py  0007_phase6_distributions.py  0008_phase7_withdrawals.py  0009_phase8_secondary.py  0010_phase9_liquidity.py  0011_phase10_family.py  0012_phase11_broker.py  0013_phase12_notifications.py  0014_phase14_reinvest_discount.py  0015_phase15b_milestones.py  0016_phase15c_investor_updates.py  0017_group3_payment_methods.py  0018_group4_estate.py  0019_group5_gifting.py  0020_group6_installments.py  0021_group7_manual_payments.py  0022_group8_family_member_data.py  0023_role_application.py
backend/app/: __init__.py  admin.py  main.py
backend/app/api/: deps.py
backend/app/core/: audit.py  config.py  db.py  errors.py  ratelimit.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  broker.py  compliance.py  developer_updates.py  distributions.py  estate.py  gifting.py  identity.py  installments.py  investments.py  liquidity.py  milestones.py  notifications.py  payment_methods.py  payments.py  payout_methods.py  secondary.py  withdrawals.py
backend/app/schemas/: __init__.py  admin.py  auth.py  broker.py  developer_update.py  distribution.py  document.py  estate.py  family.py  gifts.py  installments.py  investment.py  kyc.py  liquidity.py  milestone.py  notifications.py  owner_stats.py  payment_method.py  payout_methods.py  profile.py  property.py  secondary.py  wallet.py  withdrawal.py
backend/app/services/: __init__.py  auth_service.py  broker_service.py  certificate_service.py  connect_service.py  developer_update_service.py  distribution_service.py  document_service.py  email_service.py  estate_service.py  family_service.py  gift_service.py  installment_pdf.py  installment_service.py  investment_service.py  kyc_service.py  (+15 more)
backend/scripts/: reconcile.py  seed_admin.py  seed_phase9_demo.py  seed_properties.py  verify_migration.py
(+245 files in other folders)
