[project]
name = "capimax-backend"
version = "0.0.1"
description = "CapiMax PropShare — Python (FastAPI) backend. Phase 0: foundation & schema adoption."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    # Phase 1 — identity/auth
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    # Server-rendered admin panel (admin-gated), mounted at /admin.
    "sqladmin>=0.16",
    "itsdangerous>=2.1",
    # sqladmin's BooleanInputWidget is incompatible with WTForms 3.2 (edit forms
    # with checkbox fields crash); pin to the 3.1 line.
    "wtforms>=3.1,<3.2",
    # Phase 13 — rate limiting (IP-keyed; in-memory store, Redis for multi-worker).
    "slowapi>=0.1.9",
    # Certificates — branded PDF generation (pure-pip; no system deps).
    "reportlab>=4.2",
    # Pillow lets reportlab embed the PNG logo in the certificate (pure wheel; cert rendering
    # falls back to a vector wordmark if it is ever missing, so this is not load-bearing).
    "pillow>=10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    # Sync driver Alembic uses to apply migrations (CI + local).
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
# alembic/ holds generated boilerplate + verbatim SQL strings (intentionally long);
# it is excluded from lint here and from mypy below.
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = []
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
